first pass usage_v_time on 12/17 anther's dump

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ usage_v_time/usage_01.csv
 usage_v_time/usage_mini.csv
 
 usage_v_time/char_use_counts.csv
+
+usage_v_time/anthers_12_17_2016_wiiu3ds_game_records_pulled_12-20-16_3-50 PM.csv
